2005-12-29  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.h, gnc-hbci-utils.c: Use
	glib's g_iconv functions instead of the system's iconv(3)
	functions to improve portability.

2005-12-28  David Hampton  <hampton@employees.org>

	* src/glib-compat.h:
	* src/gnome-utils/gnc-recurrence.c:
	* src/gnome-utils/gnc-period-select.c:
	* src/gnome-utils/gnc-dense-cal.c:
	* src/gnome-utils/dialog-utils.c:
	* src/gnome-utils/gnc-frequency.c:
	* src/engine/FreqSpec.c:
	* src/engine/Recurrence.c:
	* src/gnome/druid-loan.c:
	* src/gnome/druid-acct-period.c:
	* src/gnome/dialog-sx-from-trans.c:
	* src/gnome/dialog-scheduledxaction.c:
	* src/gnome/dialog-sxsincelast.c:
	* src/app-utils/gnc-accounting-period.[ch]: Better fix for
	compiling cleanly on a glib 2.9/2.10 system without using
	deprecated functions.

2005-12-28  Christian Stimming  <stimming@tuhh.de>

	* src/gnome-utils/dialog-options.c: Improve tooltip display for
	almost all option types. Add tooltips for buttons where they were
	missing. Pack option widgets into GtkEventBox so that tooltips are
	really shown. Fix various string i18n bugs.

2005-12-27  Christian Stimming  <stimming@tuhh.de>

	* src/register/register-core/quickfillcell.c (utf8_caseequal_len):
	Fix length-delimited utf8 comparison. Fixes occasional crashes in
	register when editing quickfill entries.

2005-12-27  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-recurrence.c:
	* src/gnome-utils/gnc-period-select.c:
	* src/gnome-utils/gnc-dense-cal.c:
	* src/gnome-utils/dialog-utils.c:
	* src/gnome-utils/gnc-frequency.c:
	* src/gnome-utils/gnc-plugin-manager.c:
	* src/engine/FreqSpec.c:
	* src/engine/Recurrence.c:
	* src/gnome/druid-loan.c:
	* src/gnome/druid-acct-period.c:
	* src/gnome/dialog-sx-from-trans.c:
	* src/gnome/dialog-scheduledxaction.c:
	* src/gnome/dialog-sxsincelast.c:
	* src/app-utils/gnc-accounting-period.c:
	* lib/libqof/qof/guid.c: Update to compile cleanly on a glib